--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,17 @@
     <%= render "layouts/header" %>
 
   	<div class="container">
-  		<%= yield %>  		
-  	</div>  
+      <% flash.each do |message_type, message| %>
+        <!-- <div class="alert <%= "alert-#{message_type}" %>"> <%= message %> </div> -->        
+        <%= content_tag "div", message, class: "alert alert-#{message_type}" %>
+      <% end %>
 
-    <%= render "layouts/footer" %>
+  		<%= yield %>  	
+
+      <%= render "layouts/footer" %>
+
+      <%= debug(params) if Rails.env.development? %>	
+  	</div>     
 
   </body>
 </html>
