Add password reset

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:title, "Edit user") %>
-<%= provide(:button_text, "Save changes") %>
+<% provide(:title, "Edit user") %>
+<% provide(:button_text, "Save changes") %>
 
 <h1>Update your profile</h1>
 
