--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,11 @@
-User#password_reset
+Microblogging
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+Hi <%= @user.name %>,
+
+To reset your password click the link below:
+
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+This link will expire in two hours.
+
+If you didn not requested your password to be reset, please ignore this email and your password will stay as it is.
