--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-6 col-md-offset-3">
 	<%= form_for(@user) do |f| %>	
 
-		<%= render "layouts/error_messages" %>
+		<%= render "layouts/error_messages", object: f.object %>
 
 		<%= f.label :name %>
 		<%= f.text_field :name, class: "form-control" %>
