--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,5 @@
-<div class="jumbotron center">
-	<h1>Welcome to the Sample App</h1>
-	<h2>
-		This is the home page for the <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> sample application.
-	</h2>
-
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-
-<%= link_to image_tag("rails.png", alt: "Rails Logo"), "http://rubyonrails.org" %>
-<%#= image_tag("kitten.jpg", alt: "A cat less cute than my") %>
+<% if logged_in? %>
+	<%= render "static_pages/loggedin_home" %>
+<% else %>
+	<%= render "static_pages/public_home" %>
+<% end %>
