--- a/app/views/static_pages/_loggedin_home.html.erb
+++ b/app/views/static_pages/_loggedin_home.html.erb
@@ -3,6 +3,9 @@
 		<section class="user_info">
 			<%= render "layouts/user_info" %>
 		</section>
+		<section class="stats">
+			<%= render "layouts/stats" %>
+		</section>
 		<section class="micropost_form">
 			<%= render "layouts/micropost_form" %>
 		</section>				
